# Auto-CineFlow

./: .gitignore  DESIGN.md  README.md  pyproject.toml  requirements.txt
docs/: CURRENT_ARCHITECTURE.md  INTEGRATION_API.md  NEXT_STEPS.md  PRODUCTION_RUNBOOK.md
src/autocineflow/: __init__.py  asset_library.py  change_planner.py  config_loader.py  consistency.py  consistency_models.py  delivery.py  director_logic.py  execution_planner.py  keyframe_gate.py  keyframe_qa.py  local_visual_review.py  local_vlm_worker.py  models.py  pipeline.py  production_eval.py  project_batch.py  project_dashboard.py  project_delivery.py  project_render_qa.py  prompt_builder.py  provider_payloads.py  provider_probe.py  recovery_policy.py  (+16 more)
src/autocineflow.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_asset_library.py  test_change_planner.py  test_config_loader.py  test_delivery.py  test_director_logic.py  test_enhanced_pipeline.py  test_execution_planner.py  test_keyframe_qa.py  test_local_visual_review.py  test_local_visual_review_cli.py  test_models.py  test_pipeline.py  test_project_dashboard.py  test_project_delivery.py  test_project_render_qa.py  test_prompt_builder.py  test_provider_probe.py  test_recovery_policy.py  test_reference_rag.py  test_render_qa.py  test_result_ingest.py  test_runninghub_workflows.py  test_scene_keyframe_repair.py  test_scene_repair.py  test_scene_runner.py  test_script_analyzer.py  test_sequence_assembly.py  test_sequence_qa.py  test_spatial_solver.py  test_submission.py  test_submission_monitor.py  test_video_enhance.py
